# thor_terratorch_ext

./: .gitignore  README.md  pyproject.toml
config/: embedding_generation.yaml  embedding_generation_burnscars.yaml  embedding_generation_sen1floods11_S2.yaml  iceberg_thor_S1.yaml  lavdas_mire_thor_S2_aux.yaml  mire_thor_S2_binary.yaml  mire_thor_S2_multiclass.yaml  sen1floods11_thor_S1.yaml  sen1floods11_thor_S2.yaml  sen1floods11_thor_multibackbone_multimodal.yaml  sen1floods11_thor_multimodal.yaml  sen1floods11_timm_multibackbone_multimodal.yaml
notebooks/: thor_embedding_generation_sen1floods11.ipynb  thor_inference_sentinel3_phidown.ipynb  thor_segmentation_sen1floods11.ipynb
notebooks/notebooks/: thor_segmentation_sen1floods11.ipynb
thor_terratorch_ext/: __init__.py  transforms.py
thor_terratorch_ext/datamodules/: __init__.py  iceberg_module.py  mire_map_module.py
thor_terratorch_ext/datasets/: __init__.py  iceberg_dataset.py  mire_map_dataset.py  sentinel3_utils.py  utils.py
thor_terratorch_ext/models/: __init__.py  monkey_patch_embedding_generation.py
thor_terratorch_ext/models/backbones/: __init__.py  multi_backbone_wrapper.py  thor_vit.py
