[project]
name = "thor-terratorch-ext"
version = "0.2.0"
description = "THOR extension for TerraTorch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "terratorch==1.2.1",
    "thor @ git+https://github.com/FM4CS/THOR@v1.0.2",
]


[build-system]
requires = ["setuptools"]
build-backend = 'setuptools.build_meta'


[tool.setuptools.packages.find]
include = ["thor_terratorch_ext*"]

[dependency-groups]
dev = [
    "gdown>=5.2.1",
    "ipykernel>=7.2.0",
    "ipython>=8.37.0",
    "ipywidgets>=8.1.8",
    "ruff>=0.14.8",
]
log = [
    "wandb>=0.19.11",
]
